--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Document</title>
   </head>
@@ -33,7 +33,7 @@
             </ul>
           </div>
           <div class="a2 flex">
-            <img src="../assest/logo-removebg-preview.png" alt="" />
+            <img src="./assest/logo-removebg-preview.png" alt="" />
           </div>
           <div class="a3 flex">
             <ul>
@@ -45,7 +45,7 @@
               </li>
               <li>
                 <a class="cart" href=""
-                  ><img src="../assest/icons8-cart-90.png" width="20px"
+                  ><img src="./assest/icons8-cart-90.png" width="20px"
                 /></a>
               </li>
             </ul>
@@ -134,7 +134,7 @@
 
     <!-- Hero -->
     <section class="hero1">
-      <img src="../assest/ww.avif" alt="" width="100%" />
+      <img src="./assest/ww.avif" alt="" width="100%" />
     </section>
 
     <!-- item bar-->
@@ -147,7 +147,7 @@
         <div class="jsitem" id="a">
           <img
             class="ia"
-            src="../assest/a1.avif"
+            src="./assest/a1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -161,7 +161,7 @@
         <div class="jsitem" id="b">
           <img
             class="ib"
-            src="../assest/b1.avif"
+            src="./assest/b1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -174,7 +174,7 @@
         <div class="jsitem" id="c">
           <img
             class="ic"
-            src="../assest/c1.avif"
+            src="./assest/c1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -187,7 +187,7 @@
         <div class="jsitem" id="d">
           <img
             class="id"
-            src="../assest/d1.avif"
+            src="./assest/d1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -205,16 +205,16 @@
       <div class="container grid">
         <div class="cb">
           <img
-            src="../assest/8d2fc12a378c9a7db81851d5d729d78b91dc8b92.avif"
+            src="./assest/8d2fc12a378c9a7db81851d5d729d78b91dc8b92.avif"
             alt=""
             width="100%"
           />
         </div>
         <div class="dc">
-          <img src="../assest/casual.avif" alt="" width="100%" />
+          <img src="./assest/casual.avif" alt="" width="100%" />
         </div>
         <div class="cd">
-          <img src="../assest/suit1.avif" alt="" width="100%" />
+          <img src="./assest/suit1.avif" alt="" width="100%" />
         </div>
       </div>
     </section>
@@ -229,7 +229,7 @@
         <div class="jsitem" id="e">
           <img
             class="ie"
-            src="../assest/e1.avif"
+            src="./assest/e1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -243,7 +243,7 @@
         <div class="jsitem" id="f">
           <img
             class="if"
-            src="../assest/f1.avif"
+            src="./assest/f1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -256,7 +256,7 @@
         <div class="jsitem" id="g">
           <img
             class="ig"
-            src="../assest/g1.avif"
+            src="./assest/g1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -269,7 +269,7 @@
         <div class="jsitem" id="h">
           <img
             class="ih"
-            src="../assest/h1.avif"
+            src="./assest/h1.avif"
             alt=""
             width="300px"
             style="position: absolute"
@@ -287,46 +287,46 @@
       <div class="tit flex"><h1>TRENDING</h1></div>
       <div class="container grid">
         <a href="#"
-          ><div style="background-image: url('../product/aa.avif')"></div
+          ><div style="background-image: url('./product/aa.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/bb.avif')"></div
+          ><div style="background-image: url('./product/bb.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/cc.avif')"></div
+          ><div style="background-image: url('./product/cc.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/jj.avif')"></div
+          ><div style="background-image: url('./product/jj.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/ee.avif')"></div
+          ><div style="background-image: url('./product/ee.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/ff.avif')"></div
+          ><div style="background-image: url('./product/ff.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/gg.avif')"></div
+          ><div style="background-image: url('./product/gg.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/hh.avif')"></div
+          ><div style="background-image: url('./product/hh.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/ii.avif')"></div
+          ><div style="background-image: url('./product/ii.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/dd.avif')"></div
+          ><div style="background-image: url('./product/dd.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/kk.avif')"></div
+          ><div style="background-image: url('./product/kk.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/ll.avif')"></div
+          ><div style="background-image: url('./product/ll.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/mm.avif')"></div
+          ><div style="background-image: url('./product/mm.avif')"></div
         ></a>
         <a href="#"
-          ><div style="background-image: url('../product/nn.avif')"></div
+          ><div style="background-image: url('./product/nn.avif')"></div
         ></a>
       </div>
     </section>
@@ -349,10 +349,10 @@
               and Android.
             </p>
             <button>
-              <img class="storei" src="../assest/app-store.png" alt="" />
+              <img class="storei" src="./assest/app-store.png" alt="" />
             </button>
             <button>
-              <img class="storei" src="../assest/google-play.png" alt="" />
+              <img class="storei" src="./assest/google-play.png" alt="" />
             </button>
           </div>
         </div>
@@ -434,13 +434,13 @@
               <li>Pay with:</li>
               <div class="flex">
                 <a href=""
-                  ><img class="payimg" src="../assest/esewa.png" alt=""
+                  ><img class="payimg" src="./assest/esewa.png" alt=""
                 /></a>
                 <a href=""
-                  ><img class="payimg" src="../assest/khalti.png" alt=""
+                  ><img class="payimg" src="./assest/khalti.png" alt=""
                 /></a>
                 <a href=""
-                  ><img class="payimg" src="../assest/paypal.png" alt=""
+                  ><img class="payimg" src="./assest/paypal.png" alt=""
                 /></a>
               </div>
             </ul>
@@ -477,6 +477,6 @@
       </div>
     </section>
 
-    <script src="../script/index.js"></script>
+    <script src="./script/index.js"></script>
   </body>
 </html>
