info section centering the div

--- a/index.html
+++ b/index.html
@@ -284,50 +284,52 @@
 
     <!-- info -->
     <section class="info">
-      <div class="tit flex"><h1>TRENDING</h1></div>
-      <div class="container grid">
-        <a href="#"
-          ><div style="background-image: url('./product/aa.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/bb.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/cc.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/jj.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/ee.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/ff.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/gg.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/hh.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/ii.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/dd.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/kk.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/ll.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/mm.avif')"></div
-        ></a>
-        <a href="#"
-          ><div style="background-image: url('./product/nn.avif')"></div
-        ></a>
+      <div class="latecont">
+        <div class="tit flex"><h1>TRENDING</h1></div>
+        <div class="container grid">
+          <a href="#"
+            ><div style="background-image: url('./product/aa.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/bb.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/cc.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/jj.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/ee.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/ff.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/gg.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/hh.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/ii.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/dd.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/kk.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/ll.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/mm.avif')"></div
+          ></a>
+          <a href="#"
+            ><div style="background-image: url('./product/nn.avif')"></div
+          ></a>
+        </div>
       </div>
     </section>
     <!-- registration -->
