adding multiple pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media.css" />
     <title>Document</title>
@@ -27,7 +28,7 @@
         <div class="a flex">
           <div class="a1 flex">
             <ul>
-              <li><a href="">Adult</a></li>
+              <li><a href="./index/adultpage.html">Adult</a></li>
               <li><a href="">Teen</a></li>
               <li><a href="">Kid</a></li>
             </ul>
